// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui-bangle-button/ActionButton Primary 1`] = `
<button
  aria-label="hi brother"
  className="B-ui-bangle-button_button p-1  transition-all duration-100"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "var(--BV-ui-bangle-button-bg-color)",
      "color": "var(--BV-ui-bangle-button-color)",
    }
  }
  type="button"
>
  <span
    className=""
  >
    hi brothers from another mother
  </span>
</button>
`;

exports[`Storyshots ui-bangle-button/DropdownMenu Primary 1`] = `
<button
  aria-pressed={false}
  className="B-ui-bangle-button_button p-1  transition-all duration-100"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "var(--BV-ui-bangle-button-bg-color)",
      "color": "var(--BV-ui-bangle-button-color)",
    }
  }
  type="button"
>
  <span
    className=""
  >
    wow
  </span>
</button>
`;

exports[`Storyshots ui-components/AlertModal Destructive 1`] = `
<div>
  <button
    aria-label="open"
    className="B-ui-bangle-button_button p-1  transition-all duration-100"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "var(--BV-ui-bangle-button-bg-color)",
        "color": "var(--BV-ui-bangle-button-color)",
      }
    }
    type="button"
  >
    <span
      className=""
    >
      Open modal
    </span>
  </button>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  />
</div>
`;

exports[`Storyshots ui-components/AlertModal Scrollable Parent 1`] = `
<div
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <div>
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, corporis libero? Consequuntur veniam perferendis soluta odit rem esse earum repellat officiis cum recusandae, quas facilis eos ad rerum quibusdam eligendi.
  </div>
  <div>
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, corporis libero? Consequuntur veniam perferendis soluta odit rem esse earum repellat officiis cum recusandae, quas facilis eos ad rerum quibusdam eligendi.
  </div>
  <div>
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, corporis libero? Consequuntur veniam perferendis soluta odit rem esse earum repellat officiis cum recusandae, quas facilis eos ad rerum quibusdam eligendi.
  </div>
  <div>
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, corporis libero? Consequuntur veniam perferendis soluta odit rem esse earum repellat officiis cum recusandae, quas facilis eos ad rerum quibusdam eligendi.
  </div>
  <button
    aria-label="open"
    className="B-ui-bangle-button_button p-1  transition-all duration-100"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "var(--BV-ui-bangle-button-bg-color)",
        "color": "var(--BV-ui-bangle-button-color)",
      }
    }
    type="button"
  >
    <span
      className=""
    >
      Open modal
    </span>
  </button>
  <div>
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, corporis libero? Consequuntur veniam perferendis soluta odit rem esse earum repellat officiis cum recusandae, quas facilis eos ad rerum quibusdam eligendi.
  </div>
  <div>
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, corporis libero? Consequuntur veniam perferendis soluta odit rem esse earum repellat officiis cum recusandae, quas facilis eos ad rerum quibusdam eligendi.
  </div>
  <div>
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, corporis libero? Consequuntur veniam perferendis soluta odit rem esse earum repellat officiis cum recusandae, quas facilis eos ad rerum quibusdam eligendi.
  </div>
  <div
    aria-hidden={null}
    data-overlay-container={true}
    style={
      Object {
        "zIndex": "var(--BV-window-modal-z-index)",
      }
    }
  />
</div>
`;

exports[`Storyshots ui-components/AlertModal Simple Submit 1`] = `
<div>
  <button
    aria-label="open"
    className="B-ui-bangle-button_button p-1  transition-all duration-100"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "var(--BV-ui-bangle-button-bg-color)",
        "color": "var(--BV-ui-bangle-button-color)",
      }
    }
    type="button"
  >
    <span
      className=""
    >
      Open modal
    </span>
  </button>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  />
</div>
`;

exports[`Storyshots ui-components/BaseButton Primary 1`] = `
<button
  className="transition-all duration-100 BU_is-hovered BU_is-pressed"
  style={
    Object {
      "transform": "scale(var(--BV-ui-bangle-button-depression))",
    }
  }
  type="button"
>
  Hello
</button>
`;

exports[`Storyshots ui-components/BaseButton Secondary 1`] = `
<button
  className="transition-all duration-100"
  type="button"
>
  Hello
</button>
`;

exports[`Storyshots ui-components/Button Basic Test 1`] = `
<button
  aria-label="Hi brother"
  className="B-ui-components_button p-1 px-2 select-none BU_variant-secondary i-am-a-class transition-all duration-100"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "var(--BV-ui-bangle-button-bg-color)",
      "color": "var(--BV-ui-bangle-button-color)",
    }
  }
  type="button"
>
  Hello
</button>
`;

exports[`Storyshots ui-components/Button Destructive Button 1`] = `
<button
  aria-label="Hi brother"
  className="B-ui-components_button p-1 px-2 select-none BU_variant-destructive transition-all duration-100"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "var(--BV-ui-bangle-button-destructive-bg-color)",
      "color": "var(--BV-ui-bangle-button-destructive-color)",
    }
  }
  type="button"
>
  Hello
</button>
`;

exports[`Storyshots ui-components/Button Disabled Button 1`] = `
<button
  aria-label="Hi brother"
  className="B-ui-components_button p-1 px-2 select-none BU_variant-secondary i-am-a-class transition-all duration-100 cursor-not-allowed"
  disabled={true}
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "var(--BV-ui-bangle-button-disabled-bg-color)",
      "color": "var(--BV-ui-bangle-button-disabled-color)",
    }
  }
  type="button"
>
  Hello
</button>
`;

exports[`Storyshots ui-components/Button Primary Button 1`] = `
<button
  aria-label="Hi brother"
  className="B-ui-components_button p-1 px-2 select-none BU_variant-primary transition-all duration-100"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "var(--BV-ui-bangle-button-primary-bg-color)",
      "color": "var(--BV-ui-bangle-button-primary-color)",
    }
  }
  type="button"
>
  Hello
</button>
`;

exports[`Storyshots ui-components/Button Quiet Button 1`] = `
<button
  aria-label="Hi brother"
  className="B-ui-components_button p-1 px-2 select-none BU_variant-secondary transition-all duration-100"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "color": "var(--BV-ui-bangle-button-color)",
    }
  }
  type="button"
>
  Hello
</button>
`;

exports[`Storyshots ui-components/LocationBreadCrumb Primary 1`] = `
<div
  className="z-10 w-full py-1 pl-2"
>
  <span>
    hi
  </span>
  <span
    className="px-1"
  >
    &gt;
  </span>
  <span>
    brothers
  </span>
</div>
`;
